Update wording in Mesos post

--- a/_posts/2015-08-20-winmesos.md
+++ b/_posts/2015-08-20-winmesos.md
@@ -11,7 +11,7 @@ This morning, TechCrunch [broke the story](http://techcrunch.com/2015/08/20/meso
 
 For the vast majority of the project, I have been the only dedicated engineer working on this task. In the near future, we expect to spin up more people to make this production-worthy. It will be the only available cluster orchestration solution for groups with heterogeneous clusters.
 
-The end goal of this work will allow users to manage clusters with a mix of Linux and Windows nodes as if it were a single pool of RAM and CPU. The end goal is that engineers should be able to run something like `dcos install exchange-server` and have it "just work" on their cluster.
+The end goal of this work will allow users to manage clusters with a mix of Linux and Windows nodes as if it were a single pool of RAM and CPU. I believe that engineers should be able to run something like `dcos install exchange-server` and have it "just work" on their cluster.
 
 The support that exists in the Mesos master branch includes (at this point) the CMake-based platform-independent build system, and a first cut at a port of the `process` library, which contains most of the systems layer. In the coming weeks we expect to integrate much more of this work into the master branch, and we hope the community will try it out!
 
