Typo in mesos post

--- a/_posts/2015-08-20-winmesos.md
+++ b/_posts/2015-08-20-winmesos.md
@@ -7,7 +7,7 @@ journal: ■
 ---
 
 
-This morning, TechCrunch [broke the story](http://techcrunch.com/2015/08/20/mesosphere-partners-with-microsoft-to-bring-mesos-to-windows-server/) that Windows support is coming to Windows. This story is meant to coincide with Ben Hindman's MesosCon keynote, in which there will be a real, end-to-end demo showing us scheduling work on a cluster with a mix of Linux and Windows nodes.
+This morning, TechCrunch [broke the story](http://techcrunch.com/2015/08/20/mesosphere-partners-with-microsoft-to-bring-mesos-to-windows-server/) that Mesos support is coming to Windows. This story is meant to coincide with Ben Hindman's MesosCon keynote, in which there will be a real, end-to-end demo showing us scheduling work on a cluster with a mix of Linux and Windows nodes.
 
 For the vast majority of the project, I have been the only dedicated engineer working on this task. In the near future, we expect to spin up more people to make this production-worthy. It will be the only available cluster orchestration solution for groups with heterogeneous clusters.
 
