Update date of batch post

--- a/_posts/2016-03-30-batch.md
+++ b/_posts/2016-03-30-batch.md
@@ -11,7 +11,7 @@ Kevin Gallo just announced Bash support on Windows.
 
 If you have never had to interact with the Windows Batch language, this might not seem like such a big deal. Surely Batch could not be substantially worse than Bash, right?
 
-Bash: a language that was neither designed, nor evolved. An adequate solution to a problem that became orders of magnitude harder. As arcane as it is useful, as dangerous as it is ubiquitous, Bash: the language that asks how much are we willing to give up for convenience's sake?
+Bash: a language that was neither designed, nor evolved. An adequate solution to a problem that has since become orders of magnitude harder. As arcane as it is useful, as dangerous as it is ubiquitous, Bash: the language that asks how much we are willing to give up for convenience's sake?
 
 Sure, Bash could be worse. But _substantially_ worse? Bash had one value proposition: it was _just good enough_. It is difficult to imagine that it would have flourished as it has, if that had that not been true.
 
